// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CommuteFormContainer 1`] = `
<div
  className="content-container content-container--body"
>
  <div
    className="info"
  >
    Is it a good day to take the bike to work, or should you take the metro? Let Crisp Commute help you stay fresh and dry on your DC commute. After Filling out the form below and hitting submit, Crisp Commute will display the forecast for that time and recommend a mode of transportation.
  </div>
  <CommuteChoiceModal
    isOpen={false}
    toggleModal={[Function]}
    weather={
      Object {
        "icon": "CLEAR_DAY",
        "mode": "bike",
        "precipProbability": 0,
        "summary": "clear skies",
        "temperature": 45,
      }
    }
  />
  <CommuteForm
    onSubmit={[Function]}
  />
</div>
`;

exports[`should render CommuteFormContainer without modal 1`] = `
<div
  className="content-container content-container--body"
>
  <div
    className="info"
  >
    Is it a good day to take the bike to work, or should you take the metro? Let Crisp Commute help you stay fresh and dry on your DC commute. After Filling out the form below and hitting submit, Crisp Commute will display the forecast for that time and recommend a mode of transportation.
  </div>
  <CommuteForm
    onSubmit={[Function]}
  />
</div>
`;
